feat: update OpenAPI definitions after protecting the routes
